--- a/kinematica/exercises/1dim_oef_vraagstukken.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken.tex
@@ -493,7 +493,7 @@ Welke figuur geeft kwalitatief het verloop van de versnellingscompent van het de
 % oefeningen ingevoegd die in de theorie stond 
 \begin{exercise}
 
-    Een auto die $\SI{60}{km/h}$ rijdt, raakt een boom; de voorkant van de auto wordt in elkaar gedrukt en de bestuurder komt na $\SI{70}{cm}$ tot stilstand. Welke gemiddelde vertraging onderging de bestuurder tijdens de botsing? Druk je antwoord uit in $g$, waarbij $g=\SI{9,81}{m/s^2}$.
+    Een auto die $\SI{60}{km/h}$ rijdt, raakt een boom; de voorkant van de auto wordt in elkaar gedrukt en de bestuurder komt na $\SI{70}{cm}$ tot stilstand. Welke gemiddelde vertraging onderging de bestuurder tijdens de botsing?% Druk je antwoord uit in $g$, waarbij $g=\SI{9,81}{m/s^2}$.
     % \textit{Gegeven}  $v_0=\SI{16,7}{m/s}$%%%\newline$x=\SI{0,70}{m}$
     % \textit{Gevraagd} $a$
     % \textit{Oplossing} 
@@ -516,7 +516,7 @@ Welke figuur geeft kwalitatief het verloop van de versnellingscompent van het de
     \begin{align*}
     a&=-\frac{v_0^2}{2x}
     \end{align*}
-    Invullen van de gegevens levert $a=\SI{-198}{m/s^2}$, wat gelijk is aan $20g$.
+    Invullen van de gegevens levert $a=\SI{-198}{m/s^2}$.%, wat gelijk is aan $20g$.
     \end{oplossing}
     \end{exercise}
     
