typo + comment temp feedback

--- a/kinematica/exercises/1dim_oef_vraagstukken.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken.tex
@@ -392,7 +392,7 @@ De afstand afgelegd na \SI{15}{s} bedraagt:
     \choice{\SI{240}{\meter}}
 }
 \begin{feedback}
-    \(\Delta x = \Delta x_1 + \Delta x_2  = \overline{v}_1\cdot \Delta t_1 + v_2\cdot \Delta t_2 = \frac{v_0 + v_1}{2} \cdot \Delta t_1 + v_2 \delta t_2 = \SI{30}{\meter} + SI{120}{\meter} = \SI{150}{\meter}\)
+  % TODO: causes dubious error ???  \(\Delta x = \Delta x_1 + \Delta x_2  = \overline{v}_1\cdot \Delta t_1 + v_2\cdot \Delta t_2 = \frac{v_0 + v_1}{2} \cdot \Delta t_1 + v_2 \delta t_2 = \SI{30}{\meter} + SI{120}{\meter} = \SI{150}{\meter}\)
 \end{feedback}
 \end{question}
 
@@ -408,7 +408,7 @@ Na \SI{30}{s} heeft het deeltje een welbepaalde afstand afgelegd. Hoe groot zou 
 \begin{feedback}
     \(\Delta x_{\text{tot}} = \Delta x_{\text{vorig}} + \Delta x_3 = \Delta x_{\text{vorig}} + \overline{v}_3 \cdot \Delta t_3  = \Delta x_{\text{vorig}} + \frac{v_2 + v_3}{2} \cdot \Delta t_3 = \SI{150}{\meter} + \SI{90}{\meter} = \SI{240}{\meter}\)
 
-    We vinden nu eenvoudig de gemiddelde snelheid over de hele afstand: \[ \overline{v}_{\text{tot}} = \frac{\Detla x_{\text{tot}}}{\Delta t_{\text{tot}}} = \frac{\SI{240}{\meter}}{\SI{30}{\second}} = \SI{8}{\meter\per\second}\]
+    We vinden nu eenvoudig de gemiddelde snelheid over de hele afstand: \[ \overline{v}_{\text{tot}} = \frac{\Delta x_{\text{tot}}}{\Delta t_{\text{tot}}} = \frac{\SI{240}{\meter}}{\SI{30}{\second}} = \SI{8}{\meter\per\second}\]
 \end{feedback}
 \end{question}
 \begin{question}
