test2 voor vincent; vectoren 'test naar github' lijn toegevoegd

--- a/vectoren/vectoren_bewerkingen.tex
+++ b/vectoren/vectoren_bewerkingen.tex
@@ -16,6 +16,8 @@
 \subsection*{Scalaire vermenigvuldiging van een reëel getal met een vector}
 
 
+test naar github 
+
 Een vector kan 'herschaald' worden door hem te vermenigvuldigen met een reëel getal (d.w.z. een scalar). De richting blijft op die manier behouden. 
 De grootte en zin kunnen veranderen. 
 De scalaire verminigvuldiging wordt genoteerd als \(\vec{c} = k \cdot \vec{a}\) waarbij \(k \in \R\).
